--- a/kali.html
+++ b/kali.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>hello kali</title>
+    <title>hello kali kali kali </title>
   </head>
   <body>
     I love kali
